--- a/style.css
+++ b/style.css
@@ -3,15 +3,17 @@
  * ============================================= */
 
 .fluid-video-wrapper {
-    padding: 0;
     position: relative;
-    width: 100%; }
+    padding: 0;
+    width: 100%;
+}
 
 .fluid-video-wrapper iframe {
-    height: 100%;
-    left: 0;
     position: absolute;
+    left: 0;
     top: 0;
-    width: 100%; }
+    height: 100%;
+    width: 100%;
+}
 
 .no-js iframe { max-width: 100%; }
